--- a/mypage/templates/mypage/login.html
+++ b/mypage/templates/mypage/login.html
@@ -98,37 +98,41 @@
         line-height: normal;
 
         }
+
     </style>
 </head>
 <body style="background-color: #F1F1F5;">
 
 {% include 'portfolio/menubar.html' %}<br>
-<img src="{% static 'portfolio/image/logo.png' %}" style="width: 170px; height: 140px; margin-bottom: -100px;margin-left: 670px; margin-right: 20px;">
+<img src="{% static 'portfolio/image/logo.png' %}"
+     style="width: 170px; height: 140px; margin-bottom: -100px;margin-left: 670px; margin-right: 20px;">
 
-    <div class="container mx-auto text-center" id="login_body">
-        {% if user.is_authenticated %}
-        로그인성공!
-        {{ user.username }}님 환영합니다.
-        <a href="{% url 'user:logout' %}">로그아웃</a>
-        {% else %}
-        <br>
-        <form class="login-box" method="POST" action="{% url 'user:login' %}">
-            {% csrf_token %}
-            <h3 style="font-family: Noto Sans; font-size: 26px;font-weight: 500;">Sign In</h3><br>
-            <input type="text" name="username" placeholder="아이디를 입력해주세요" style="text-align: center; font-family: 'Noto Sans'; ">
-            <br><br>
-            <input type="password" name="password" placeholder="비밀번호를 입력해주세요" style="text-align: center; font-family: Noto Sans; font-weight: 500;">
-            <br><br>
-            <input id="login-button" type="submit" value="로그인">
-        </form>
-        <div class="search">
+<div class="container mx-auto text-center" id="login_body">
+    {% if user.is_authenticated %}
+    로그인성공!
+    {{ user.username }}님 환영합니다.
+    <a href="{% url 'user:logout' %}">로그아웃</a>
+    {% else %}
+    <br>
+    <form class="login-box" method="POST" action="{% url 'user:login' %}">
+        {% csrf_token %}
+        <h3 style="font-family: Noto Sans; font-size: 26px;font-weight: 500;">Sign In</h3><br>
+        <input type="text" name="username" placeholder="아이디를 입력해주세요"
+               style="text-align: center; font-family: 'Noto Sans'; ">
+        <br><br>
+        <input type="password" name="password" placeholder="비밀번호를 입력해주세요"
+               style="text-align: center; font-family: Noto Sans; font-weight: 500;">
+        <br><br>
+        <input id="login-button" type="submit" value="로그인">
+    </form>
+    <div class="search">
 
-            <div style="margin-bottom: 30px;">아이디 찾기 | 비밀번호 찾기 | <a id="signup" href="{% url 'user:signup' %}">회원가입</a></div>
-
-
+        <div style="margin-bottom: 30px;">아이디 찾기 | 비밀번호 찾기 | <a id="signup" href="{% url 'user:signup' %}">회원가입</a>
         </div>
-        {% endif %}
     </div>
-<div class="box"></div>
+    {% endif %}
+</div>
+<br><br><br>
 </body>
+{% include 'single_page/footer.html' %}
 </html>
