--- a/mypage/templates/mypage/my_detail.html
+++ b/mypage/templates/mypage/my_detail.html
@@ -1,7 +1,54 @@
-{% extends 'mypage/base.html' %}
+<!DOCTYPE html>
+
 {% load static %}
-{% block content %}
+<html lang="ko">
+<head>
+
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <title>{% block title %}Portfolio{% endblock %}</title>
     <style>
+        .rounded-basebox {
+
+            width: 210px;
+            height: 450px;
+            border-radius: 20px;
+            border: 2px solid #02343F;
+            background: #F8F8FA;
+            padding: 45px;
+            margin-left: 170px;
+            margin-top: 100px;
+
+
+        }
+
+        .base-title {
+            display: inline-block;
+            width: 210px;
+            margin: 5px;
+            color: #767676;
+            text-align:center;
+            font-size: 15px;
+            font-weight: bold;
+            padding: 20px;
+            font-style: normal;
+            text-decoration: none;
+            font-family: Noto Sans;
+            margin-left: auto;
+            margin-right: auto;
+
+        }
+
+        .rounded-circle.article-img {
+            width: 150px; /* 최대 너비 */
+            height: 150px; /* 최대 높이 */
+            padding-bottom: 10px;
+            padding-top: 5px;
+            margin-left: -18px;
+            margin-right: auto;
+
+        }
 
         .home {
             width: 100%;
@@ -17,7 +64,7 @@
 
         .wel {
             width: 100%;
-            height: 100%;
+            height: 70%;
             color: #191919;
             font-size: 24px;
             font-family: Noto Sans;
@@ -104,108 +151,177 @@
             flex-wrap: wrap;
         }
 
+
     </style>
+</head>
 
-    <div class="container">
+<body style="background-color: #F1F1F5;">
 
-        <div class="information" style="margin-top: -370px;">
+{% include 'portfolio/menubar.html' %}<br>
 
-            <h3 class="info-title">ID</h3><h3 class="info-info">{{ user.username }}</h3>
-            <br>
-            <h3 class="info-title">학번</h3><h3 class="info-info">{{ user.number }}</h3>
-            <br>
-            <h3 class="info-title">대학</h3><h3 class="info-info">{{ user.college }}</h3>
-            <br>
-            {% if user.major %}
-                <h3 class="info-title">학과</h3><h3 class="info-info">{{ user.major }}</h3>
-            {% else %}
-                <h3 class="info-title">학과</h3><h3 class="info-info">-</h3>
-            {% endif %}
-            <h3 class="info-title">학적 상태</h3><h3 class="info-info">{{ user.status }}</h3>
-            <br>
-            <h3 class="info-title">관심 직무</h3>
-            <h3 class="info-info">
-                {% if user.interests.all %}
-                    {% for interest in user.interests.all %}
-                        <button class="btn btn-primary" style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; padding-left: -15px;text-decoration: none;color: white; background-color: #0C4C0E;">{{ interest.interest }}</button>
-                    {% endfor %}
+
+<div style="width: 100%; height: 100%; color: #191919; font-size: 28px; font-family: Noto Sans; font-weight: 600; margin-left: 150px;margin-bottom: -67px; margin-top: 50px ">
+    {{ request.user.username }}님의 마이페이지
+</div>
+<div class="rounded-basebox">
+    <div class="row">
+        <div class="content-section">
+            <div class="media">
+                {% if user.profile.image.url %}
+                <img class="rounded-circle article-img" src="{{ user.profile.image.url }}">
                 {% else %}
-                    <p>관심 직무가 없습니다.</p>
+                <img class="rounded-circle article-img" src="{% static 'portfolio/image/duksaeheart.png' %}">
                 {% endif %}
-            </h3>
+            </div>
+            <!-- FORM HERE -->
+
         </div>
-        <div class="wel">나의 모집글</div>
-        <!-- 모집글 작성 카드 -->
-        <div class="write">
-            <div id="recruitCarousel" class="carousel slide recruit-carousel" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    {% if user_recruit %}
-                        {% for r in user_recruit %}
-                            {% if forloop.first or forloop.counter0|divisibleby:3 %}
-                                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                    <div class="row">
-                            {% endif %}
-                                            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-                                                <div class="card border-success position-relative recruit-card" style="border: 2px solid 0C4C0E" onclick="redirectToDetailPage({{r.pk}}, 'recruit')">
-                                                    {% if user.profile.image.url %}
-                                                        <!-- 이미지가 있으면 여백을 추가한 원형으로 보여줍니다. -->
+        <br>
+        <a href="{% url 'user:update' username=user.username %}" class="base-title">내 프로필 수정</a>
+        <br>
+        <a href="{% url 'user:detail' username=user.username %}" class="base-title">홈</a>
 
-                                                            <img src="{{ user.profile.image.url }}" style="width: 70px; height: 70px;" class="img-fluid rounded-circle" alt="헤더 이미지">
+        <br>
+        {% if user.status.status == '재학생' %}
+        <a href="{% url 'user:user_portfolios' username=user.username %}" class="base-title">나의 포트폴리오</a>
+        {% elif user.status.status == '휴학생' %}
+        <a href="{% url 'user:user_portfolios' username=user.username %}" class="base-title">나의 포트폴리오</a>
+        {% elif user.status.status == '졸업생' %}
+        <a href="{% url 'user:user_pass_portfolios' username=user.username %}" class="base-title">나의 합격 수기</a>
+        {% endif %}
 
-                                                    {% else %}
-                                                        <!-- 이미지가 없으면 기본 원형 플레이스홀더를 보여줍니다. -->
-                                                    <img src="{% static 'portfolio/image/duksaeheart.png' %}" style="width: 70px; height: 70px; border-radius:100px; border: 2px solid #D9D9D9;">
-                                                    {% endif %}
-                                                    <div class="card-body position-relative">
-                                                        <h5 class="card-title">{{ r.author }}님</h5>
-                                                        <p class="card-text"><span style="font-family: 'Noto Sans'; color: #999999;">{{ r.department }}</span></p>
-                                                        <p class="card-text"><span style="font-family: 'Noto Sans'; font-weight: 600;">모집인원 |</span> {{ r.people }}</p>
-                                                        <p class="card-text"><span style="font-family: 'Noto Sans';">{{ r.title }}</span></p>
-                                                        <p class="card-text position-absolute top-0 end-0">
-                                                            {% now "Y년 m월 d일 H시 i분 s초" as now %}
-                                                            {% with d_day=r.calculate_d_day|add:"2" %}
-                                                                {% if d_day >= 0 %}
-                                                                    {% if d_day == 0 %}
-                                                                        <button class="btn btn-danger">D-day!</button>
-                                                                    {% else %}
-                                                                        <button class="btn btn-primary" style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;"><b>D-{{ d_day }}</b></button>
-                                                                    {% endif %}
-                                                                {% else %}
-                                                                    <button class="btn btn-secondary " style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">모집 기간 종료</button>
-                                                                {% endif %}
-                                                            {% endwith %}
-                                                        </p>
-                                                        <a href= "{{ r.get_absolute_url }}" class="btn btn-primary text-light" style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">더보기</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                            {% if forloop.last or forloop.counter|divisibleby:3 %}
-                                    </div>
+
+    </div>
+    <br>
+
+</div>
+<div class="container">
+
+    <div class="information" style="margin-top: -370px;">
+
+        <h3 class="info-title">ID</h3>
+        <h3 class="info-info">{{ user.username }}</h3>
+        <br>
+        <h3 class="info-title">학번</h3>
+        <h3 class="info-info">{{ user.number }}</h3>
+        <br>
+        <h3 class="info-title">대학</h3>
+        <h3 class="info-info">{{ user.college }}</h3>
+        <br>
+        {% if user.major %}
+        <h3 class="info-title">학과</h3>
+        <h3 class="info-info">{{ user.major }}</h3>
+        {% else %}
+        <h3 class="info-title">학과</h3>
+        <h3 class="info-info">-</h3>
+        {% endif %}
+        <h3 class="info-title">학적 상태</h3>
+        <h3 class="info-info">{{ user.status }}</h3>
+        <br>
+        <h3 class="info-title">관심 직무</h3>
+        <h3 class="info-info">
+            {% if user.interests.all %}
+            {% for interest in user.interests.all %}
+            <button class="btn btn-primary"
+                    style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; padding-left: -15px;text-decoration: none;color: white; background-color: #0C4C0E;">
+                {{ interest.interest }}
+            </button>
+            {% endfor %}
+            {% else %}
+            <p>관심 직무가 없습니다.</p>
+            {% endif %}
+        </h3>
+    </div>
+    <div class="wel">나의 모집글</div>
+    <!-- 모집글 작성 카드 -->
+    <div class="write">
+        <div id="recruitCarousel" class="carousel slide recruit-carousel" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                {% if user_recruit %}
+                {% for r in user_recruit %}
+                {% if forloop.first or forloop.counter0|divisibleby:3 %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    <div class="row">
+                        {% endif %}
+                        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                            <div class="card border-success position-relative recruit-card"
+                                 style="border: 2px solid 0C4C0E" onclick="redirectToDetailPage({{r.pk}}, 'recruit')">
+                                {% if user.profile.image.url %}
+                                <!-- 이미지가 있으면 여백을 추가한 원형으로 보여줍니다. -->
+
+                                <img src="{{ user.profile.image.url }}" style="width: 70px; height: 70px;"
+                                     class="img-fluid rounded-circle" alt="헤더 이미지">
+
+                                {% else %}
+                                <!-- 이미지가 없으면 기본 원형 플레이스홀더를 보여줍니다. -->
+                                <img src="{% static 'portfolio/image/duksaeheart.png' %}"
+                                     style="width: 70px; height: 70px; border-radius:100px; border: 2px solid #D9D9D9;">
+                                {% endif %}
+                                <div class="card-body position-relative">
+                                    <h5 class="card-title">{{ r.author }}님</h5>
+                                    <p class="card-text"><span style="font-family: 'Noto Sans'; color: #999999;">{{ r.department }}</span>
+                                    </p>
+                                    <p class="card-text"><span style="font-family: 'Noto Sans'; font-weight: 600;">모집인원 |</span>
+                                        {{ r.people }}</p>
+                                    <p class="card-text"><span style="font-family: 'Noto Sans';">{{ r.title }}</span>
+                                    </p>
+                                    <p class="card-text position-absolute top-0 end-0">
+                                        {% now "Y년 m월 d일 H시 i분 s초" as now %}
+                                        {% with d_day=r.calculate_d_day|add:"2" %}
+                                        {% if d_day >= 0 %}
+                                        {% if d_day == 0 %}
+                                        <button class="btn btn-danger">D-day!</button>
+                                        {% else %}
+                                        <button class="btn btn-primary"
+                                                style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">
+                                            <b>D-{{ d_day }}</b></button>
+                                        {% endif %}
+                                        {% else %}
+                                        <button class="btn btn-secondary "
+                                                style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">
+                                            모집 기간 종료
+                                        </button>
+                                        {% endif %}
+                                        {% endwith %}
+                                    </p>
+                                    <a href="{{ r.get_absolute_url }}" class="btn btn-primary text-light"
+                                       style="font-family: 'Noto Sans'; font-weight: 500;border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">더보기</a>
                                 </div>
+                            </div>
+                        </div>
+                        {% if forloop.last or forloop.counter|divisibleby:3 %}
+                    </div>
+                </div>
 
-                            {% endif %}
-                        {% endfor %}
-                    <button class="carousel-control-prev" type="button" data-bs-target="#recruitCarousel" data-bs-slide="prev">
+                {% endif %}
+                {% endfor %}
+                <button class="carousel-control-prev" type="button" data-bs-target="#recruitCarousel"
+                        data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#recruitCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#recruitCarousel"
+                        data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-                    {% else %}
-                        <div class="col-12">
-                            <p class="text-muted" style="font-family: 'Noto Sans';font-weight: bold;">나와 활동을 함께 할 덕우를 찾아보세요!</p>
-                            <a href= "{% url 'recruit:your_combined_view' %}" class="btn btn" style="font-family:'Noto Sans'; margin-left: 10px; font-weight: 500; border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">작성하기</a>
-                        </div>
-                    {% endif %}
+                {% else %}
+                <div class="col-12">
+                    <p class="text-muted" style="font-family: 'Noto Sans';font-weight: bold;">나와 활동을 함께 할 덕우를 찾아보세요!</p>
+                    <a href="{% url 'recruit:your_combined_view' %}" class="btn btn"
+                       style="font-family:'Noto Sans'; margin-left: 10px; font-weight: 500; border-radius: 20px; text-decoration: none;color: white; background-color: #0C4C0E;">작성하기</a>
                 </div>
+                {% endif %}
             </div>
         </div>
-
-        <div class="home">기본정보</div>
-
     </div>
+
+    <div class="home">기본정보</div>
+
+</div>
+
+<br><br><br>
+</body>
 <script>
     function redirectToDetailPage(pk, namespace) {
         // Django URL 패턴에 맞게 URL을 구성합니다.
@@ -218,5 +334,7 @@
         var detailPageUrl = urlPattern.replace("0", pk);
         window.location.href = detailPageUrl;
     }
+
 </script>
-{% endblock %}
+{% include 'single_page/footer.html' %}
+</html>
