--- a/mypage/templates/mypage/update.html
+++ b/mypage/templates/mypage/update.html
@@ -1,96 +1,188 @@
-<!-- update.html -->
+<!DOCTYPE html>
 
-{% extends 'mypage/base.html' %}
-{% block content %}
-  <div class="container mt-5">
+{% load static %}
+<html lang="ko">
+<head>
+
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <title>{% block title %}Portfolio{% endblock %}</title>
+    <style>
+        .rounded-basebox {
+
+            width: 210px;
+            height: 450px;
+            border-radius: 20px;
+            border: 2px solid #02343F;
+            background: #F8F8FA;
+            padding: 45px;
+            margin-left: 170px;
+            margin-top: 100px;
+
+
+        }
+
+        .base-title {
+            display: inline-block;
+            width: 210px;
+            margin: 5px;
+            color: #767676;
+            text-align:center;
+            font-size: 15px;
+            font-weight: bold;
+            padding: 20px;
+            font-style: normal;
+            text-decoration: none;
+            font-family: Noto Sans;
+            margin-left: auto;
+            margin-right: auto;
+
+        }
+
+        .rounded-circle.article-img {
+            width: 150px; /* 최대 너비 */
+            height: 150px; /* 최대 높이 */
+            padding-bottom: 10px;
+            padding-top: 5px;
+            margin-left: -18px;
+            margin-right: auto;
+
+        }
+    </style>
+</head>
+<body style="background-color: #F1F1F5;">
+
+{% include 'portfolio/menubar.html' %}<br>
+
+
+<div style="width: 100%; height: 100%; color: #191919; font-size: 28px; font-family: Noto Sans; font-weight: 600; margin-left: 150px;margin-bottom: -67px; margin-top: 50px ">
+    {{ request.user.username }}님의 마이페이지
+</div>
+<div class="rounded-basebox">
+    <div class="row">
+        <div class="content-section">
+            <div class="media">
+                {% if user.profile.image.url %}
+                <img class="rounded-circle article-img" src="{{ user.profile.image.url }}">
+                {% else %}
+                <img class="rounded-circle article-img" src="{% static 'portfolio/image/duksaeheart.png' %}">
+                {% endif %}
+            </div>
+            <!-- FORM HERE -->
+
+        </div>
+        <br>
+        <a href="{% url 'user:update' username=user.username %}" class="base-title">내 프로필 수정</a>
+        <br>
+        <a href="{% url 'user:detail' username=user.username %}" class="base-title">홈</a>
+
+        <br>
+        {% if user.status.status == '재학생' %}
+        <a href="{% url 'user:user_portfolios' username=user.username %}" class="base-title">나의 포트폴리오</a>
+        {% elif user.status.status == '휴학생' %}
+        <a href="{% url 'user:user_portfolios' username=user.username %}" class="base-title">나의 포트폴리오</a>
+        {% elif user.status.status == '졸업생' %}
+        <a href="{% url 'user:user_pass_portfolios' username=user.username %}" class="base-title">나의 합격 수기</a>
+        {% endif %}
+
+
+    </div>
+    <br>
+
+</div>
+<div class="container mt-5">
     <h2 class="mb-4">회원 정보 수정</h2>
     <form method="POST" action="{% url 'user:update' username=user.username %}">
-      {% csrf_token %}
-      <div class="form-group row">
-        <label for="username" class="col-sm-2 col-form-label">User Name</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control" id="username" name="username" value="{{ user.username }}">
+        {% csrf_token %}
+        <div class="form-group row">
+            <label for="username" class="col-sm-2 col-form-label">User Name</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="username" name="username" value="{{ user.username }}">
+            </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="password" class="col-sm-2 col-form-label">새로운 비밀번호</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="password" name="password" placeholder="새로운 비밀번호를 입력하세요">
+        <div class="form-group row">
+            <label for="password" class="col-sm-2 col-form-label">새로운 비밀번호</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="password" name="password" placeholder="새로운 비밀번호를 입력하세요">
+            </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="confirm" class="col-sm-2 col-form-label">비밀번호 확인</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="confirm" name="confirm" placeholder="비밀번호를 다시 입력하세요">
+        <div class="form-group row">
+            <label for="confirm" class="col-sm-2 col-form-label">비밀번호 확인</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="confirm" name="confirm" placeholder="비밀번호를 다시 입력하세요">
+            </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="number" class="col-sm-2 col-form-label">학번</label>
-        <div class="col-sm-10">
-          <select name="number" id="number" required>
-            <option value="" disabled selected>학번 선택</option>
-            {% for n in numbers %}
-              <option value="{{ n.number }}">{{ n.number }}</option>
-            {% endfor %}
-          </select>
+        <div class="form-group row">
+            <label for="number" class="col-sm-2 col-form-label">학번</label>
+            <div class="col-sm-10">
+                <select name="number" id="number" required>
+                    <option value="" disabled selected>학번 선택</option>
+                    {% for n in numbers %}
+                    <option value="{{ n.number }}">{{ n.number }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="college" class="col-sm-2 col-form-label">대학</label>
-        <div class="col-sm-10">
-          <select id="college" name="college">
-            <option value="" disabled selected>대학 선택</option>
-            {% for college in colleges %}
-              <option value="{{ college.name }}">{{ college.name }}</option>
-            {% endfor %}
-          </select>
+        <div class="form-group row">
+            <label for="college" class="col-sm-2 col-form-label">대학</label>
+            <div class="col-sm-10">
+                <select id="college" name="college">
+                    <option value="" disabled selected>대학 선택</option>
+                    {% for college in colleges %}
+                    <option value="{{ college.name }}">{{ college.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="major" class="col-sm-2 col-form-label">전공</label>
-        <div class="col-sm-10">
-          <select id="major" name="major" disabled>
-            <!-- 이 부분은 JavaScript로 동적으로 업데이트됩니다 -->
-          </select>
+        <div class="form-group row">
+            <label for="major" class="col-sm-2 col-form-label">전공</label>
+            <div class="col-sm-10">
+                <select id="major" name="major" disabled>
+                    <!-- 이 부분은 JavaScript로 동적으로 업데이트됩니다 -->
+                </select>
+            </div>
         </div>
-      </div>
-    <div class="form-group row">
-  <label for="interests" class="col-sm-2 col-form-label">관심 직무</label>
-  <div class="col-sm-10">
-    <div class="row">
-      {% for interest in interests %}
-        <div class="col-md-1">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="interests-{{ interest.name }}-{{ interest.id }}" name="interests" value="{{ interest.id }}">
-            <label class="form-check-label" for="interests-{{ interest.name }}-{{ interest.id }}">{{ interest.interest }}</label>
-          </div>
+        <div class="form-group row">
+            <label for="interests" class="col-sm-2 col-form-label">관심 직무</label>
+            <div class="col-sm-10">
+                <div class="row">
+                    {% for interest in interests %}
+                    <div class="col-md-1">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox"
+                                   id="interests-{{ interest.name }}-{{ interest.id }}" name="interests"
+                                   value="{{ interest.id }}">
+                            <label class="form-check-label" for="interests-{{ interest.name }}-{{ interest.id }}">{{ interest.interest }}</label>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-      {% endfor %}
-    </div>
-  </div>
+
+        <div class="form-group row">
+            <label for="status" class="col-sm-2 col-form-label">학적 상태</label>
+            <div class="col-sm-10">
+                {% for status in status %}
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="status-{{ status.status }}" name="status"
+                           value="{{ status.status }}">
+                    <label class="form-check-label" for="status-{{ status.status }}">{{ status.status }}</label>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-10 offset-sm-2">
+                <button type="submit" class="btn btn-primary">수정 완료</button>
+            </div>
+        </div>
+    </form>
 </div>
 
-      <div class="form-group row">
-        <label for="status" class="col-sm-2 col-form-label">학적 상태</label>
-        <div class="col-sm-10">
-          {% for status in status %}
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" id="status-{{ status.status }}" name="status" value="{{ status.status }}">
-              <label class="form-check-label" for="status-{{ status.status }}">{{ status.status }}</label>
-            </div>
-          {% endfor %}
-        </div>
-      </div>
-
-      <div class="form-group row">
-        <div class="col-sm-10 offset-sm-2">
-          <button type="submit" class="btn btn-primary">수정 완료</button>
-        </div>
-      </div>
-    </form>
-  </div>
-
-  <script>
+<script>
     document.getElementById('college').addEventListener('change', function () {
       var selectedCollege = this.value;
       var majorDropdown = document.getElementById('major');
@@ -100,22 +192,22 @@
 
       // 대학에 따른 전공 옵션을 추가
       switch (selectedCollege) {
-        case '과기':
+        case '과학기술대학':
           {% for major in sm %}
             majorDropdown.innerHTML += '<option value="{{ major.name }}">{{ major.name }}</option>';
           {% endfor %}
           break;
-        case '약학':
+        case '약학대학':
           {% for major in pm %}
             majorDropdown.innerHTML += '<option value="{{ major.name }}">{{ major.name }}</option>';
           {% endfor %}
           break;
-        case '아앤디':
+        case '아트앤디자인대학':
           {% for major in am %}
             majorDropdown.innerHTML += '<option value="{{ major.name }}">{{ major.name }}</option>';
           {% endfor %}
           break;
-        case '글융':
+        case '글로벌융합대학':
           {% for major in gm %}
             majorDropdown.innerHTML += '<option value="{{ major.name }}">{{ major.name }}</option>';
           {% endfor %}
@@ -125,5 +217,9 @@
       // 선택된 대학에 따라 전공 드롭다운 활성화
       majorDropdown.disabled = false;
     });
-  </script>
-{% endblock %}
+
+</script>
+</body>
+{% include 'single_page/footer.html' %}
+</html>
+
