--- a/pass_portfolio/templates/pass_portfolio/filtersearch_major_results.html
+++ b/pass_portfolio/templates/pass_portfolio/filtersearch_major_results.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results</title>
     <!-- Bootstrap CSS link (Add Bootstrap if not already added) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
     .card-img-rounded{
     margin-top: 10px;
@@ -52,7 +53,8 @@
     margin-left: 700px;
     margin-top:20px;
     }
-</style>
+
+    </style>
 </head>
 <body>
 <div>
@@ -60,14 +62,15 @@
     {% if results %}
     <div class="container justify-content-center">
         <div class="d-flex">
-            <p style="margin-top:50px; margin-bottom:40px; margin-left: 70px; font-size:25px; font-weight: bold; font-family: 'Noto Sans';">검색된 졸업생 합격수기 입니다  {{ results.count }}</p>
+            <p style="margin-top:50px; margin-bottom:40px; margin-left: 70px; font-size:25px; font-weight: bold; font-family: 'Noto Sans';">검색된 졸업생 합격수기 입니다 {{ results.count }}</p>
             <a href="{% url 'pass_portfolio:pass_portfolio_list' %}" class="btn btn-primary" id="back">뒤로가기</a>
         </div>
         <div class="container" style="width:1200px;">
             <div class="row">
                 {% for p in results %}
-                <div class="col-sm-12 col-md-4 col-sm-4 mb-5" >
-                    <div class="card" style="border: 2px solid #02343F; border-radius: 20px; height: 220px; width: 350px; padding:10px; " onclick="redirectToDetailPage({{p.pk}}, 'pass_portfolio')">
+                <div class="col-sm-12 col-md-4 col-sm-4 mb-5">
+                    <div class="card"
+                         style="border: 2px solid #02343F; border-radius: 20px; height: 220px; width: 350px; padding:10px; " onclick="redirectToDetailPage({{p.pk}}, 'pass_portfolio')">
                         <div class="d-flex" style="margin-left: 20px; margin-top: 10px;">
                             {% if p.anonymous %}
                             <img src="{{ p.author.profile.image.url }}" class="card-img-rounded rounded-pill ml-2" alt="..." style="width:80px; height:80px">
@@ -103,20 +106,22 @@
                                 var lineBreak = document.createElement('br');
                                 hashtagsContainer.appendChild(lineBreak);
                                 }
-                                });</script>
+                                });
+                            </script>
                         </div>
                     </div>
                 </div>
                 {% endfor %}
             </div>
             {% else %}
-                <p class="d-flex justify-content-center" style="margin-top:200px; font-size: 30px; font-weight: bold; font-family: 'Noto Sans';">선택하신 조건에 맞는 합격수기가 없습니다!</p>
-                <a href="{% url 'pass_portfolio:pass_portfolio_list' %}" class="btn btn-primary" id="none-back">뒤로 가기</a>
+            <p class="d-flex justify-content-center"
+               style="margin-top:200px; font-size: 30px; font-weight: bold; font-family: 'Noto Sans';">선택하신 조건에 맞는 합격수기가 없습니다!</p>
+            <a href="{% url 'pass_portfolio:pass_portfolio_list' %}" class="btn btn-primary" id="none-back">뒤로 가기</a>
             {% endif %}
         </div>
     </div>
 </div>
-         <!-- 페이지네이션 링크 표시 -->
+<!-- 페이지네이션 링크 표시 -->
 {% if results.has_other_pages %}
 <div class="pagination justify-content-center mt-3 mb-5">
     <li class="page-item d-flex">
@@ -137,10 +142,16 @@
 </div>
 {% endif %}
 
-    <!-- Bootstrap JS and Popper.js (Add Bootstrap JS and Popper.js if needed) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js" integrity="sha512-TPh2Oxlg1zp+kz3nFA0C5vVC6leG/6mm1z9+mA81MI5eaUVqasPLO8Cuk4gMF4gUfP5etR73rgU/8PNMsSesoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Bootstrap JS and Popper.js (Add Bootstrap JS and Popper.js if needed) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"
+        integrity="sha512-TPh2Oxlg1zp+kz3nFA0C5vVC6leG/6mm1z9+mA81MI5eaUVqasPLO8Cuk4gMF4gUfP5etR73rgU/8PNMsSesoQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
 function redirectToDetailPage(pk, namespace) {
         // Django URL 패턴에 맞게 URL을 구성합니다.
@@ -153,6 +164,8 @@ function redirectToDetailPage(pk, namespace) {
         var detailPageUrl = urlPattern.replace("0", pk);
         window.location.href = detailPageUrl;
     }
+
 </script>
 </body>
+{% include 'single_page/footer.html' %}
 </html>
