--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -66,8 +66,6 @@
                 </div>
             <input type="file" id="image-input" accept="image/*" onchange="previewImage(this)">
 
-
-
             </div>
 
  <div class="container mb-4 rounded p-2" style=" height: 200px; margin-left:380px; margin-top: -200px; width: 55%; background-color: #FFEAEA8C">
@@ -121,8 +119,7 @@
             <div class="col-md-6">
                 <div class="dropdown" style="margin-left: -219px; margin-top: -96px;">
                     <label class="form-label" for="major">전공</label>
-                    <select class="form-select form-select-sm" id="major" name="major" style="font-family: Noto Sans; font-weight: 400; width: 160px;border-radius: 10px; border: 2px #02343F solid;">
-                    전공 선택
+                    <select class="form-select form-select-sm" id="major" name="major" style="font-family: Noto Sans; font-weight: 400; width: 160px;border-radius: 10px; border: 2px #02343F solid;">전공 선택
                     </select>
                 </div>
             </div>
@@ -312,22 +309,22 @@ document.getElementById('college').addEventListener('change', function () {
 
     // 대학에 따른 전공 옵션을 추가
     switch (selectedCollege) {
-        case '과기':
+        case '과학기술대학':
             {% for major in sm %}
                 majorDropdown.innerHTML += '<option value="{{ major.id }}">{{ major.name }}</option>';
             {% endfor %}
             break;
-        case '약학':
+        case '약학대학':
             {% for major in pm %}
                 majorDropdown.innerHTML += '<option value="{{ major.id }}">{{ major.name }}</option>';
             {% endfor %}
             break;
-        case '아앤디':
+        case '아트앤디자인대학':
             {% for major in am %}
                 majorDropdown.innerHTML += '<option value="{{ major.id }}">{{ major.name }}</option>';
             {% endfor %}
             break;
-        case '글융':
+        case '글로벌융합대학':
             {% for major in gm %}
                 majorDropdown.innerHTML += '<option value="{{ major.id }}">{{ major.name }}</option>';
             {% endfor %}
@@ -455,4 +452,5 @@ function saveText() {
 <script src="{% static 'portfolio/load.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
+{% include 'single_page/footer.html' %}
 </html>
