--- a/portfolio/templates/portfolio/menubar.html
+++ b/portfolio/templates/portfolio/menubar.html
@@ -1,13 +1,13 @@
 {% load static %}
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <link href="{% static 'mypage/css/topmenu.css' %}" rel="stylesheet" type="text/css" media="screen">
     <link href="{% static 'mypage/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="screen">
     <script src="https://kit.fontawesome.com/edea15a092.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
-<style>
+    <style>
   nav a {
     text-decoration: none; /* 밑줄 제거 */
   }
@@ -16,7 +16,8 @@
     /* 원하는 크기로 조절 */
     width: 500px;
   }
-</style>
+
+    </style>
 </head>
 
 <script>
@@ -30,88 +31,90 @@
             }
         }
     }
+
 </script>
 
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary py-0">
-  <div class="container">
-      {% if user.is_authenticated %}
+    <div class="container">
+        {% if user.is_authenticated %}
         <a class="navbar-brand" href="{% url 'single_page:main_page' %}">
             <img src="{% static 'portfolio/image/logo.png' %}" style="width: 180px; height: 120px;">
         </a>
-      {% else %}
+        {% else %}
         <a class="navbar-brand" href="{% url 'single_page:main_page' %}">
             <img src="{% static 'portfolio/image/logo.png' %}" style="width: 180px; height: 120px;">
         </a>
-      {% endif %}
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-      <ul class="navbar-nav me-auto mb-5 mb-lg-2">
-          <form class="my-custom-inline-flex p-3" role="search" method="get" action="{% url 'portfolio:search_view' %}" >
-              <input class="form-control my-custom-search-input mt-2" name="q" type="search" placeholder="지금 관심있게 보고 있는 활동은 무엇인가요?" aria-label="Search" style="border-radius: 30px; border: 2px solid #02343F;">
-              <button class="btn" type="btn" >
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search mt-2" viewBox="0 0 16 16">
-                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                  </svg>
-              </button>
-          </form>
-      </ul>
-    </div>
-    <div id="menubar-sign-in" style="margin-top:30px;">
-        {% if user.is_authenticated %}
-        <a href="{% url 'user:logout' %}" class="top-login-button">로그아웃</a>
-        {% else %}
-        <a href="{% url 'user:login' %}" class="top-login-button">로그인</a>
         {% endif %}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+            <ul class="navbar-nav me-auto mb-5 mb-lg-2">
+                <form class="my-custom-inline-flex p-3" role="search" method="get" action="{% url 'portfolio:search_view' %}">
+                    <input class="form-control my-custom-search-input mt-2" name="q" type="search" placeholder="지금 관심있게 보고 있는 활동은 무엇인가요?" aria-label="Search" style="border-radius: 30px; border: 2px solid #02343F;">
+                    <button class="btn" type="btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search mt-2" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                        </svg>
+                    </button>
+                </form>
+            </ul>
+        </div>
+        <div id="menubar-sign-in" style="margin-top:30px;">
+            {% if user.is_authenticated %}
+            <a href="{% url 'user:logout' %}" class="top-login-button">로그아웃</a>
+            {% else %}
+            <a href="{% url 'user:login' %}" class="top-login-button">로그인</a>
+            {% endif %}
+        </div>
+        <div id="menubar-sign-up" style="margin-top:30px;">
+            {% if user.is_authenticated %}
+            <a href="{% url 'user:signup' %}" class="top-sign-up-button">회원가입</a>
+            {% else %}
+            <a href="{% url 'user:signup' %}" class="top-sign-up-button">회원가입</a>
+            {% endif %}
+        </div>
     </div>
-    <div id="menubar-sign-up" style="margin-top:30px;" >
-        {% if user.is_authenticated %}
-        <a href="{% url 'user:signup' %}" class="top-sign-up-button">회원가입</a>
-        {% else %}
-        <a href="{% url 'user:signup' %}" class="top-sign-up-button">회원가입</a>
-        {% endif %}
-    </div>
-  </div>
 </nav>
 <nav class="navbar navbar-expand-lg bg-body-tertiary py-0">
-  <div class="container ">
-    <div class="collapse navbar-collapse" id="navbarSupportedContent2">
-      <ul class="navbar-nav mb-5 mb-lg-2">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'portfolio:portfolio_list' %}">포트폴리오</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'delight:program_list' %}">비교과</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'recruit:recruit_list' %}">모집게시판</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'pass_portfolio:pass_portfolio_list' %}">졸업생 합격 수기</a>
-        </li>
-        <li class="nav-item ">
-          {% if user.is_authenticated %}
-            <a class="nav-link active" aria-current="page" onclick="checkMY('{{ user.username }}')">Mypage</a>
-            {% else %}
-            <a class="nav-link active" aria-current="page" onclick="checkMY('')">Mypage</a>
+    <div class="container ">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent2">
+            <ul class="navbar-nav mb-5 mb-lg-2">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'portfolio:portfolio_list' %}">포트폴리오</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'delight:program_list' %}">비교과</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'recruit:recruit_list' %}">모집게시판</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"
+                       href="{% url 'pass_portfolio:pass_portfolio_list' %}">졸업생 합격 수기</a>
+                </li>
+                <li class="nav-item ">
+                    {% if user.is_authenticated %}
+                    <a class="nav-link active" aria-current="page" onclick="checkMY('{{ user.username }}')">Mypage</a>
+                    {% else %}
+                    <a class="nav-link active" aria-current="page" onclick="checkMY('')">Mypage</a>
+                    {% endif %}
+                </li>
+            </ul>
+        </div>
+        <div class="menubar mb-2">
+            {% if user.is_authenticated %}
+            <a class="top-button1 me-2" aria-current="page" href="{% url 'recruit:your_combined_view' %}">팀원 모집 등록</a>
             {% endif %}
-        </li>
-      </ul>
-    </div>
-    <div class="menubar mb-2">
-        {% if user.is_authenticated %}
-      <a class="top-button1 me-2" aria-current="page" href="{% url 'recruit:your_combined_view' %}">팀원 모집 등록</a>
-        {% endif %}
-      {% if user.is_authenticated %}
-    {% if user.status.status == '재학생' or user.status.status == '휴학생' %}
-        <a class="top-button2" aria-current="page" href="{% url 'portfolio:your_combined_view' %}">포트폴리오 등록</a>
-    {% elif user.status.status == '졸업생' %}
-        <a class="top-button2" aria-current="page" href="{% url 'pass_portfolio:your_combined_view' %}">합격 수기 등록</a>
-    {% endif %}
+            {% if user.is_authenticated %}
+            {% if user.status.status == '재학생' or user.status.status == '휴학생' %}
+            <a class="top-button2" aria-current="page" href="{% url 'portfolio:your_combined_view' %}">포트폴리오 등록</a>
+            {% elif user.status.status == '졸업생' %}
+            <a class="top-button2" aria-current="page" href="{% url 'pass_portfolio:your_combined_view' %}">합격 수기 등록</a>
+            {% endif %}
 
-{% endif %}
-      </div>
-  </div>
+            {% endif %}
+        </div>
+    </div>
 </nav>
